feat: service logic and update gitignore file
